app/assets/stylesheets/navbar.css
header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 3.75rem;
  padding: 0.688rem 1.25rem;
  gap: 1rem;
  position: relative;
}

header.passive-header {
  display: none;
}

#logo {
  width: 8.25rem;
  height: 2.375rem;
}

#search-container {
  position: absolute;
  top: 16px;
  z-index: 1;
  margin: 0 auto;
  display: flex;
  width: 100%;
  border-radius: 0 0 0.313rem 0.313rem;
  padding: 0 20px;
}

#search-wrapper {
  background-color: var(--white);
  border-radius: 30px;
  box-shadow: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
  width: 100%;
}

#search-icon {
  width: 1.688rem;
  height: 1.5rem;
}

#search-form {
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 0.5rem 1.25rem;
}

#search-field {
  width: 100%;
  border: none;
  background: var(--white);
  z-index: 1;
}

#search-field::placeholder {
  font-size: 1.125rem;
  color: var(--gray);
}

#search-field:focus {
  outline: none;
}

#search-results {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.result-icon {
  width: 24px;
}

.search-results-link-container {
  & mark {
    background-color: var(--green);
    color: var(--white);
  }

  height: auto;
  width: 100%;
  padding: 1rem 1.25rem;
}

.search-results-link {
  text-decoration: none;
  display: block;
}

.search-address {
  font-size: 14px;
  color: var(--gray);
}

nav {
  background-color: var(--white);
  padding: 5px 20px;
  width: 100%;
  height: 62px;
  position: sticky;
  bottom: 0;
  box-shadow: 0 -0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
}

#nav-menu {
  display: flex;
  list-style: none;
  gap: 5px;
  justify-content: center;
}

.nav-link a {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
  justify-content: center;
}

.nav-icon {
  width: 32px;
  height: 32px;
}

#nav-menu span {
  font-size: 9px;
  text-align: center;
}

#vh-handle {
  display: none;
}

#add-place-link {
  display: flex;
  align-items: center;
  font-size: 1.125rem;
}

.vh-instagram a {
  display: flex;
  align-items: center;
  gap: 5px;
  height: 42px;
}

#sign-in-link {
  border-radius: 1.25rem;
  background: var(--green);
  color: var(--white);
  font-weight: 500;
  line-height: 100%;
  padding: 0.813rem 1.313rem;
  font-size: 1.125rem;
  width: max-content;
}

.wrapper {
  display: flex;
}

.dropdown {
  list-style-type: none;
  display: flex;
  align-items: center;
  font-size: 1.125rem;
  gap: 5px;
}

#logout-link {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#nav-menu.hidden {
  display: none;
}

.hidden {
  display: none;
}

@media (min-width: 1024px) {
  .mobile {
    display: none;
    width: 0;
  }

  header {
    /* justify-content: space-between; */
    padding: 16px 48px;
    height: 4.375rem;
    /* display: flex;
    align-items: center;
    justify-content: space-between;
    height: 3.75rem;
    padding: 0.688rem 1.25rem;
    gap: 1rem; */
  }

  header.passive-header, header.active-header {
    /* display: block; */
    height: 60px;
    display: flex;
    align-items: center;

  }
  
 

  #search-container {
    justify-content: center;
    width: auto;
    width: 40vw;
    padding: 0 0 0 48px;
    left: 0;
  }

  #search-wrapper {
    display: flex;
    flex-direction: column;
    border: none;
    position: relative;
    width: 100%;
  }

  #search-icon {
    width: 1.188rem;
    height: 1.188rem;
  }

  #search-form {
    height: 100%;
  }

  #search-field {
    height: 3.125rem;
    font-size: 1.125rem;
  }

  #search-field::placeholder {
    opacity: 0.8;
    color: var(--gray);
    font-size: 1.125rem;
    font-weight: 400;
  }

  #search-results {
    position: absolute;
    left: 0;
    padding-top: 10px;
    border: none;
    width: 100%;
    background-color: var(--white);
    overflow: scroll;
    max-height: 60vh;
    scrollbar-width: none; /* Firefox */
    top: 40px;
    border-radius: 0 0 30px 30px;
  }

  #search-results::-webkit-scrollbar {
    display: none;
  }

  .search-results-link {
    border: none;
  }

  .search-address {
    font-size: 14px;
  }

  #burger {
    display: none;
  }

  nav {
    position: absolute;
    top: 0;
    right: 0;
    /* width: 50%; */
    width: auto;
    height: 60px;
    padding-right: 48px;
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: none;
  }

  #nav-menu {
    display: flex;
    gap: 2rem;
    list-style-type: none;
    justify-content: flex-end;
  }

  .nav-link {
    display: flex;
    align-items: center;
    height: auto;
    padding: 0;
  }

  .invisible-link {
    display: none;
  }

  #add-place-wrapper {
    background-color: var(--white);
    position: absolute;
    top: 76px;
    /* display: flex; */
    /* width: 200px; */
    height: 50px;
    border-radius: 30px;
    /* flex-direction: row; */
  }

  .nav-link span {
    white-space: nowrap;
    
  }

  .nav-icon {
    display: none;
  }

  #nav-menu span {
    font-size: 18px;
  }

  .wrapper {
    margin-top: 0;
    position: relative;
    display: inline-block;
  }

  #add-place-link {
    gap: 5px;
    display: flex;
    width: auto;
    flex-direction: row;
    padding: 8px;
  }

  #account-icon {
    display: block;
    border-radius: 50%;
    object-fit: cover;
  }

  .dropdown {
    visibility: hidden;
    transition: visibility 0s linear 0.5s;
    position: absolute;
    right: 0;
    border-radius: 10px;
    background: var(--white);
    box-shadow: 0 0.25rem 1.25rem 0 rgba(0, 0, 0, 0.25);
    font-size: 1.125rem;
    height: 5.25rem;
    z-index: 6;
    gap: 0.5rem;

    & li {
      width: max-content;
      height: 24px;
      padding: 0;
    }
  }

  /* .dropdown li:nth-child(1) {
    padding: 8px 16px;
  } */

  .wrapper:hover .dropdown {
    visibility: visible;
    transition-delay: 0s;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 8px;
  }

  #logout-link {
    border: none;
    padding: 0;
    justify-content: center;
    width: 100%;
  }

  #logout-icon {
    display: none;
  }

  /* .nav-link:last-child {
    display: none;
  } */
}

